--- a/charts/docker-mailserver/templates/service.yaml
+++ b/charts/docker-mailserver/templates/service.yaml
@@ -36,7 +36,7 @@ spec:
     release: "{{ .Release.Name }}"
   ports:
     - name: smtp
-      port: 25
+      port: {{ .Values.service.ports.smtp }}
       targetPort: smtp
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30025" .Values.service.nodePort.smtp }}
@@ -44,89 +44,89 @@ spec:
 
     - name: submissions
       targetPort: submissions
-      port: 465
+      port: {{ .Values.service.ports.submissions }}
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30465" .Values.service.nodePort.smtps }}
       {{- end }}    
     - name: submission
       targetPort: submission
-      port: 587
+      port: {{ .Values.service.ports.submission }}
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30587" .Values.service.nodePort.submission }}
       {{ end }}
   {{- if .Values.proxyProtocol.enabled }}
     - name: smtp-proxy
       targetPort: smtp-proxy
-      port: 12525
+      port: {{ .Values.service.ports.smtp_proxy }}
     - name: subs-proxy
       targetPort: subs-proxy
-      port: 10465
+      port: {{ .Values.service.ports.subs_proxy }}
     - name: sub-proxy
       targetPort: sub-proxy
-      port: 10587
+      port: {{ .Values.service.ports.sub_proxy }}
   {{- end }}   
 
   {{- if and (.Values.deployment.env.ENABLE_IMAP) (not .Values.deployment.env.SMTP_ONLY) }}
     - name: imap
       targetPort: imap
-      port: 143
+      port: {{ .Values.service.ports.imap }}
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30143" .Values.service.nodePort.imap }}
       {{- end }}       
     - name: imaps
       targetPort: imaps
-      port: 993
+      port: {{ .Values.service.ports.imaps }}
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30993" .Values.service.nodePort.imaps }}
       {{- end }}   
     {{- if .Values.proxyProtocol.enabled }}
     - name: imap-proxy
       targetPort: imap-proxy
-      port: 10143
+      port: {{ .Values.service.ports.imap_proxy }}
     - name: imaps-proxy
       targetPort: imaps-proxy
-      port: 10993
+      port: {{ .Values.service.ports.imaps_proxy }}
     {{- end }}   
   {{- end }}   
 
   {{- if and (.Values.deployment.env.ENABLE_POP3) (not .Values.deployment.env.SMTP_ONLY) }}
     - name: pop3
       targetPort: pop3
-      port: 110
+      port: {{ .Values.service.ports.pop3 }}
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30110" .Values.service.nodePort.pop3 }}
       {{- end }}   
     - name: pop3s
       targetPort: pop3s
-      port: 995
+      port: {{ .Values.service.ports.pop3s }}
       {{- if eq .Values.service.type "NodePort" }}    
       nodePort: {{ default "30995" .Values.service.nodePort.pop3s }}
       {{- end }}    
     {{- if .Values.proxyProtocol.enabled }}
     - name: pop3-proxy
       targetPort: pop3-proxy
-      port: 10110
+      port: {{ .Values.service.ports.pop3_proxy }}
     - name: pop3s-proxy
       targetPort: pop3s-proxy
-      port: 10995
+      port: {{ .Values.service.ports.pop3s_proxy }}
     {{- end }}   
   {{- end }}   
  
     {{- if .Values.deployment.env.ENABLE_RSPAMD }}
     - name: rspamd
       targetPort: rspamd
-      port: 11334  
+      port: {{ .Values.service.ports.rspamd }}
     {{- end }}   
 
     {{- if and (.Values.deployment.env.ENABLE_MANAGESIEVE) (not .Values.deployment.env.SMTP_ONLY) }}
     - name: managesieve
       targetPort: managesieve
-      port: 4190  
+      port: {{ .Values.service.ports.managesieve }}
     {{- end }}   
  
     {{- if .Values.metrics.enabled }}
     - name: metrics
-      port: 9154
+      port: {{ .Values.service.ports.metrics }}
       targetPort: 9154       
     {{- end }}
 
